SET (TEST_COLLECTION_NAME "testExportImport" )

SET (TEST_DATA_PATH ${CMAKE_CURRENT_BINARY_DIR})

execute_process( COMMAND "date" "-u" "+%m%d%Y-%H%M%S" OUTPUT_VARIABLE CONFIG_NUMBER )
string( STRIP ${CONFIG_NUMBER} CONFIG_NUMBER )

string(RANDOM LENGTH 3 ALPHABET 0123456789 RAND_NAME)
message(STATUS "RAND_NAME=${RAND_NAME}")

string(RANDOM LENGTH 5 ALPHABET 0123456789 VERSION_NUMBER)
message(STATUS "VERSION_NUMBER=${VERSION_NUMBER}")

set (CONFIG_NUMBER "03172016-174859")
set (TEST_CONFIG_NAME "testConfigF${CONFIG_NUMBER}")

string(RANDOM LENGTH 5 ALPHABET 0123456789 ENTITY_NUMBER)
message(STATUS "VERSION_NUMBER=${ENTITY_NUMBER}")

SET (TEST_ENTITY_NAME    entityF${ENTITY_NUMBER} )

SET (TEST_VERSION_NAME    versionF${VERSION_NUMBER} )
add_subdirectory(test000)

SET (TEST_VERSION_NAME    versionF${VERSION_NUMBER} )
add_subdirectory(test001)
add_subdirectory(test002)
add_subdirectory(test003)
add_subdirectory(test004)

