execute_process( COMMAND "date" "-u" "+%m%d%Y-%H%M%S" OUTPUT_VARIABLE CONFIG_NUMBER )
string( STRIP ${CONFIG_NUMBER} CONFIG_NUMBER )

string(RANDOM LENGTH 5 ALPHABET 0123456789 RAND_NAME)
message(STATUS "RAND_NAME=${RAND_NAME}")

string(RANDOM LENGTH 3 ALPHABET 0123456789 VERSION_NUMBER)
message(STATUS "VERSION_NUMBER=${VERSION_NUMBER}")

string(RANDOM LENGTH 3 ALPHABET 0123456789 RUN_NUMBER)
message(STATUS "RUN_NUMBER=${RUN_NUMBER}")

set (CONFIG_NUMBER "03252018-222027")

set (TEST_CONFIG_NAME "testConfigA${CONFIG_NUMBER}")

set (TEST_ENTITY_NAME "Aggregator_topol${CONFIG_NUMBER}")

set (TEST_RUN_NUMBER "${RUN_NUMBER}")

add_subdirectory(test000)
add_subdirectory(test001)

install_source()
